@@ -43,19 +43,20 @@ function setActiveStyleSheet(title) {
 <div id="bottomLeftLeft">
 <h2>Latest News</h2>
 
+<h3><a href="http://www.gnome.org/mobile/">The GNOME Mobile & Embedded Initative</a></h3>
+<p>The GNOME Foundation has announced the creation of the GNOME Mobile &amp; Embedded
+Initiative (GMAE), and a software platform for user experience development
+across a wide range of device profiles. The GNOME Mobile &amp; Embedded Initiative
+will advance the use, development and commercialization of GNOME components as a
+mobile and embedded user experience platform. It brings together industry
+leaders, expert consultants, key developers and the community and industry
+organizations they represent.</p>
+
 <h3><a href="http://www.gnome.org/start/2.18/">GNOME 2.18 Released!</a></h3>
 <p>The GNOME desktop is now faster and easier to configure than ever before.
 Learn more about this release through the <a
 href="http://www.gnome.org/start/2.18/">GNOME 2.18 start page</a> and the
 detailed <a href="http://www.gnome.org/start/2.18/notes/C/">release notes</a>.</p>
-
-<h3><a href="http://www.gnome.org/projects/soc">Google Summer of Code 2007</a></h3>
-<p>GNOME is participating in Summer of Code 2007. If you are a student and you
-want to apply, you can <a
-href="http://code.google.com/soc/student_step1.html">submit</a> your project
-before March 26th. You can find some <a
-href="http://live.gnome.org/SummerOfCode2007/Ideas">ideas for projects</a> on
-our wiki.</p>
 
 <h3><a href="http://www.gnomejournal.org/">The GNOME Journal, March Edition</a></h3>
 <p>The latest issue of the GNOME Journal has just been published. GNOME Journal
