@@ -1,3 +1,7 @@
+2007-04-19  Thomas Wood  <thos@gnome.org>
+
+	* www.gnome.org/index.html: Add GMAE to news, and remove Google SoC.
+
 2007-04-19  Elijah Newren  <newren gmail com>
 
 	* www.gnome.org/start/index.wml:
